// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders correctly 1`] = `
<ul
  className="c-list"
>
  <Item
    className={null}
    unstyled={false}
  >
    lorem
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    ipsum
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    dolor
  </Item>
</ul>
`;

exports[`List renders correctly an inline list 1`] = `
<ul
  className="c-list c-list--inline"
>
  <Item
    className={null}
    unstyled={false}
  >
    lorem
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    ipsum
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    dolor
  </Item>
</ul>
`;

exports[`List renders correctly an ordered list 1`] = `
<ol
  className="c-list c-list--ordered"
>
  <Item
    className={null}
    unstyled={false}
  >
    lorem
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    ipsum
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    dolor
  </Item>
</ol>
`;

exports[`List renders correctly an unstyled list 1`] = `
<ul
  className="c-list c-list--unstyled"
>
  <Item
    className={null}
    unstyled={false}
  >
    lorem
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    ipsum
  </Item>
  <Item
    className={null}
    unstyled={false}
  >
    dolor
  </Item>
</ul>
`;
